force-app/main/default/lwc/employee/employee.css
.profile-heading {
    padding: 15px;
    border: 1px solid #edeeef;
    border-radius: 5px;
    margin-bottom: 10px;
    background-color: #ffffff;
    position: relative;
    cursor: pointer;
}

.profile-details {
    padding: 15px;
    border: 1px solid #edeeef;
    border-radius: 5px;
    margin-bottom: 10px;
    background-color: #ffffff;
    position: relative;
    cursor: pointer;
}

.middle-card-details {
    border: 1px solid #edeeef;
    border-radius: 5px;
    margin-bottom: 10px;
    position: relative;
    cursor: pointer;
    margin-left: -7px;
    margin-right: -7px;
}

.card-details {
    padding: 10px 15px;
    border-radius: 6px;
    background-color: #2862ff;
    position: relative;
    text-align: center;
    text-overflow: ellipsis;
    cursor: pointer;
    height: 100px;
    margin: 0 7px;
    box-shadow: 0px 10px 5px lightblue;
}

.card-details:hover {
    background: #e9f6ff;
    border: 1px solid #4786ff;
    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 10%);
}

.card-details-active {
    padding: 10px 15px;
    border-radius: 6px;
    position: relative;
    text-align: center;
    text-overflow: ellipsis;
    cursor: pointer;
    height: 79px;
    margin: 0 7px;
    box-shadow: 0px 10px 5px lightblue;
    background: #4085cb !important;
}

.middle-icon-allignmet {
    position: relative;
    padding-left: 15px;
}

.image-allignment {
    position: absolute;
    left: 0px;
    top: 2px;
}

.mb-10 {
    margin-bottom: 10px;
}

.slds-card {
    background: white !important;
}

.version-list {
    background-color: #ecf0f2;
}

.version-list li {
    padding: 15px;
    border: 1px solid #edeeef;
    border-radius: 5px;
    margin-bottom: 10px;
    background-color: #ffffff;
    position: relative;
    cursor: pointer;
}

.version-list li:last-child {
    margin-bottom: 0;
}

.version-list li h3 {
    /* color: #0687eb; */
    /* font-weight: 400;
    font-size: 16px;*/
    margin-bottom: 8px;
}

.version-list li .link {
    margin-left: 20px;
}

.version-list li:hover {
    background: #e9f6ff;
    border: 1px solid #4786ff;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .1);

}

.blue-icon {
    --lwc-colorTextIconDefault: rgb(15, 48, 233);
}

.white-icon {
    --lwc-colorTextIconDefault: white;
}

.badge-semi-blue {
    border-radius: 15px !important;
    padding: 0 15px;
    background: #1464f6;
    float: right;
    display: block;
    color: #ffffff;
}

.badge-semi-red {
    border-radius: 15px !important;
    padding-right: 12px;
    background: #c90c0c;
    color: #ffffff;
    margin-left: 28%;
}

.badge-semi-green {
    border-radius: 15px !important;
    background: #2bd309;
    color: #ffffff;
    font-size: 9px;
}

.profile-icon {
    border-radius: 50% !important;
    font-size: 10px;
    background: #4dd7fa;
    line-height: 80px;
    color: #ffffff;
    width: 80px;
    height: 80px;
    text-align: center;
    margin: 0 auto;
}

.badge-semi-orrange {
    border-radius: 15px !important;
    background: #d49f0bdc;
    color: #ffffff;
    font-size: 9px;
}

.mb-5x {
    margin-bottom: 5px;
}

.ul-tab li {
    display: inline-block;
    padding: 8px 20px;
    ;
}

.ul-tab .tab-active {
    background-color: #0687eb;
    color: white;
    border-radius: 25px;
}

.inner-tab-set .slds-tabs_default__nav .slds-is-active:after {
    background-color: transparent !important;
    height: none;
}

.inline-table {
    overflow: auto;
    transform: translate3d(0, 0, 0);
}

.slds-tabs_default__nav {
    border-bottom: unset !important;
}

.inner-span-set {
    display: inline-block;
    width: 33% !important;
}

.icon-label {
    border-radius: 50% !important;
    margin: 0px auto;
    font-size: 20px;
    background: #4dd7fa;
    justify-content: center;
    color: #ffffff;
    width: 70px;
    height: 70px;
}

.middle-icon-label {
    border-radius: 50% !important;
    font-size: 10px;
    background: rgb(0 0 0 / 15%);
    ;
    line-height: 40px;
    color: #ffffff;
    width: 40px;
    margin-top: 5px;
    height: 40px;
}

.separator-line {
    width: 100%;
    height: 3px;
    background-color: #d6d6d6;
    margin-bottom: 10px;
}

.middle-card-data {
    font-size: 24px;
    font-weight: bold;
    text-align: left;
    margin-bottom: 0;
}

.middle-card-label {
    text-align: left;
    margin-top: -5px;
}

.card-details-active {
    padding: 10px 15px;
    border-radius: 6px;
    position: relative;
    text-align: center;
    text-overflow: ellipsis;
    cursor: pointer;
    height: 100px;
    margin: 0 7px;
    background: #4085cb !important;
}

.card-details {
    padding: 10px 15px;
    border-radius: 6px;
    border: 1px solid #EFEDEF;
    background-color: #ffffff;
    position: relative;
    text-align: center;
    text-overflow: ellipsis;
    cursor: pointer;
    height: 90px;
    margin: 0 7px;
    box-shadow: 1px 8px 5px rgb(197, 207, 210);
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}

.inner-span-set-capability {
    display: inline-block;
    width: 90% !important;
    margin-top: 16px;
}

.version-text,
.document-type-text {
    padding-right: 10px;
    font-size: 18px;
    font-weight: 520;
    color: black;
}

/*
    start To Be deployed in theme page in community builder,
    Below Css are specific to theme, so need to update in the BUILDER
 */

.mainNavItem {
    color: #ffffff;
    ;
    font-size: 16px;
}

.forceCommunityThemeNav.jepsonHomeHeader .mainNavItem .linkBtn.comm-navigation__top-level-item-link--active {
    font-weight: 600;
}

.load-more,
.download-link {
    /* color: #0687eb;
    font-weight: 600; */
    text-decoration: none;
    --sds-c-icon-color-foreground-default: #0687EB;
}

.load-more:hover,
.download-link:hover {
    text-decoration: none;
}

.selectDocument {
    border-radius: 0;
    border-left: 0;
    border-right: 0;
    border-top: 0;
    /*background: transparent;*/
    padding-left: 0;
    padding-right: 25px;
    outline: none;
}

.selectVersion {
    width: 65%;
    color: #000;
    border-color: #0d0b0b;
    border-width: 1px;
    padding: 5px 2px;
    /* font-weight: 400;
    font-size: 15px; */
}

.boxElement {
    color: gray;
    font-size: 16px;
}

/* To Be deployed in theme page in community builder end*/

.type-label {
    /* font-size:13px; */
    color: #999999;
    font-size: 13px;
}

.header-title {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.header-title,
.description-body {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

@media only screen and (max-width: 480px) {
    .ul-tab li {
        width: 100%;
        text-align: center;
    }
}

.text-green {
    color: green;
}

.text-right {
    text-align: right;
}

.date-bg {
    background: #dadada;
    width: max-content;
}

.mb-30p {
    margin-bottom: 30px;
}

.head-card-count-active {
    font-size: 30px;
    color: #ddd;
}

.head-card-count {
    font-size: 30px;
}
.text-right {
    text-align: right;
}
.text-left {
    text-align: left;
}
.active-status {
    margin-top: 24px;
    width: 100px;
    line-height: 25px;
}
.star-icon-blue {
--sds-c-icon-color-foreground-default: rgb(0, 123, 255);
--sds-c-icon-color: gray;
}
.p-7 {
    padding: 7px;
}
.lh-15 {
    line-height: 15px;
}
.tab-overdue {
    border-bottom: #1e73f2 7px solid;
}

.tab-open {
    border-bottom: #72bb53 7px solid;
}

.tab-incomplete {
    border-bottom: #F6B609 7px solid;
}

.tab-complete {
    border-bottom: #72bb53 7px solid;
}
.card-details:hover {
    background: #7977f4
}

.card-details:hover>.tab-count {
    color: #fff;
}

.card-details:hover>.tab-sub-content {
    color: #fff
}
.fs-30 {
    font-size: 30px;
}
.watch-list-card {
    padding: 10px 15px;
    border-radius: 6px;
    border: 1px solid #EFEDEF;
    background-color: #ffffff;
    position: relative;
    text-align: center;
    text-overflow: ellipsis;
    cursor: pointer;
    margin: 0 7px;
    box-shadow: 1px 8px 5px rgb(197 207 210);
    height: 48px;
    margin-bottom: 20px;
    padding: 13px;
}

